Fix sonar issues
Signed-off-by: Giovanni Ferrari <giovanni.ferrari@soft.it>